--- a/server/package.json
+++ b/server/package.json
@@ -3,5 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "node-cache": "^5.1.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7"
   }
 }
