--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,14 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "luxon": "^3.5.0",
+    "mongodb": "^6.14.2",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/luxon": "^3.4.2",
+    "@types/node": "^22.13.10",
     "dotenv": "^16.4.7"
   }
 }
