--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "ldrs": "^1.1.2",
+    "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
