--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "ldrs": "^1.1.2",
+    "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,7 @@
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4"
