--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "fuse.js": "^6.6.2",
+    "infinitescroll": "^0.1.9",
     "ldrs": "^1.1.2",
     "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.9"
   },
