--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/query-async-storage-persister": "^5.81.5",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "@tanstack/react-query-persist-client": "^5.81.5",
     "dompurify": "^3.2.6",
     "fuse.js": "^6.6.2",
     "infinitescroll": "^0.1.9",
     "ldrs": "^1.1.2",
-    "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
