--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "googleapis": "^155.0.0",
     "luxon": "^3.5.0",
     "mongodb": "^6.14.2",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/luxon": "^3.4.2",
