--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/query-async-storage-persister": "^5.81.5",
     "@tanstack/react-query": "^5.81.2",
@@ -22,6 +23,7 @@
     "infinitescroll": "^0.1.9",
     "ldrs": "^1.1.2",
     "luxon": "^3.5.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
